--- a/piedra-papel-tijera.html
+++ b/piedra-papel-tijera.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Juego de Piedra Papel o Tijeras</h1>
-    <script src="/afterclass 1/piedra-papel-tijera.js"></script>
+    <script src="/pre-entregas-coder/primer-pre-entrega-simulador-interactivo/pre-entrega1/piedra-papel-tijera.js"></script>
 </body>
 </html>
